2023-07-21 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Update documentation of pragma sdcc_hash.

2023-07-17 Felix Salfelder <felix AT salfelder.org>

	* support/regression/cases/generate-cases.py:
	  Fix bug #3614.

2023-07-17 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in,
	  support/regression/compact-results.py:
	  Fix bug #3613.

2023-07-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/gen.c:
	  Fix bug #3615 for pdk15.

2023-07-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/_minimal.c:
	  Fix an accidentially comitted debug line.
	* src/stm8/gen.c:
	  Fix bug #3615 for stm8.

2023-07-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix a Z(1)80 bug in wide reads from pointers into registers.

2023-07-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  src/*/main.c:
	  Fix bug #3611 via patch by bbbbbr.
	* src/SDCCgenconstprop.cc:
	  Use (CHAR_BIT * sizeof (unsigned long long)) when C2X ULLONG_WIDTH is not available.
	* src/SDCCcse.c:
	  Fix bug #3612.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge genconstprop branch to trunk.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version:
	  Bump version for generalized constant propagation.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge next branch to trunk.
	* device/lib/stm8/support:
	  Cleanup.

2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Fix a compiler crash due to operation narrowing invalidating iCode sequence numbers.

2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/ds390/gen.c:
	  Fix an issue in ds390 casts to _BitInt.

2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/pdk/main.c:
	  Generalized constant propagation optimization for pdk and mcs51 pointers.

2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>